assets/css/style.css
/* Roots */
/* Add variables for main colours */
:root {
  --primary_colour: #4d6a3c;
  --secondary_colour: #e9ddc8;
  --third_colour: #5a1e26;
}

/* Resets */
*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

html, body {
    height: 100%;
    width: 100;
    background-color: #e9c8d3 !important ;
}

/* Global Classes */

.hide {
    display: none;
}

/* Custom style */

.header {
    display: flex;
    font-size: 25px;
    flex-direction: row;
    justify-content: space-evenly;
    align-items: center;
    width: 100%;
    height: 15%;
    background-color: #4d6a3c;
    color: white;
    border-color: #1b1816 !important;
}

h1{
  color: #e9c8d3 !important;
  
}

h2{
    border-top: 5px solid #e9ddc8;
    padding: 120px 0 20px 0 !important;
    margin: 20px !important;
}

.header{
    position: fixed;
    max-height: 12%;
}
.header #logo {
    height: 150px; 
    overflow: hidden; 
    /* z-index: 200; */
}

.btn{
    background-color: #5a1e26!important  ;
    border-radius: 10px !important;
    border-color: #4d6a3c !important;
    border-bottom: 2px solid #5a1e26 !important;
    border-bottom: 4px solid #5a1e26 !important;
    color: #e9c8d3 !important;

}

.container {
    display: flex;
    flex-direction: column;
    align-items: center;
}

#search-city {
    width: 3fr;
    margin: -20px;
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
}

#search-btn {
    width: 1fr;
    font-size: 20px;
    background-color:  #5a1e26;
    border-radius: 10px;    
    color: #e9c8d3 !important ;
    box-shadow: 5px color #4d6a3c;
    padding: 5px 75px;
    margin: 20px;
    position: center;
    
}

#city {
    font-size: 20px;
    width: 100%;
    border-radius: 5px;
    border: 2px solid black;
    height: 50px;
    padding-bottom: 5px;
    padding-top: 0px;
    padding-left: 5px;
}

#map{
    width: 100%;
    height: 100%;
}

  /* Category Grid CSS */

  #categoryGrid {
    margin: 0px 5%;
    display: grid;
    grid-template-rows: 400px 400px 400px;
    grid-template-columns: 1fr 1fr 1fr;
    grid-template-areas:
    "London London London"
    "Madrid Madrid Paris"
    "Amsterdam Amsterdam Berlin";
  }
  
  #London {
    border-top: 9px solid #e9ddc8;
    grid-area: London;
    background-image: url("../images/london.jpg");
  
  }
  #Madrid{
    border-top: 9px solid #e9ddc8;
    grid-area: Madrid;
    background-image: url("../images/madrid.jpg");
  }
  
  #Paris {
    border-top: 9px solid #e9ddc8;
    grid-area: Paris;
    background-image: url("../images/paris.jpg");
  }
  
  #Amsterdam {
    border-top: 9px solid #e9ddc8;
    grid-area: Amsterdam;
    background-image: url("../images/amsterdam.jpg");
  }
  
  #Berlin {
    border-top: 9px solid #e9ddc8;
    grid-area: Berlin;
    background-image: url("../images/berlin.jpg");
  }
  
  .categoryGridArea {
    background-position: center;
    background-size: cover;
    background-repeat: no-repeat;
    margin: 5px;
    cursor: pointer;
    display: grid;
    align-content: end;
  }
  
  .heading {
    background-color: rgba(0,0,0,0.7);
    padding: 35px;
    height: 25px;
    color: white;
    font-size: 25px;
    border-bottom: 19px solid#4d6a3c;
  }
  
 
  @media screen and (max-width:600px) {
 
    #categoryGrid {
      margin: 0px 5%;
      display: grid;
      grid-template-rows: 500px 500px 500px 500px 800px;
      grid-template-columns: 1fr;
      grid-template-areas: 
      "London"
      "Madrid"
      "Paris"
      "Amsterdam"
      "Berlin";
    }
  }

/* Footer */
.footer{
    display: flex;
    flex-direction: column;
    align-items: center;
    padding: 3%;
}

/* Media Query */

